--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,8 +28,8 @@
           <ul class="list-unstyled font-small mt-5 mb-0">
             <li>
               <p class="text-uppercase mb-2"><strong>Name</strong></p>
-              <p class="text-muted mb-4"><%=user.local.firstname%></p>
-              <p class="text-muted mb-4"><%=user.local.lastname%></p>
+            <p><span class="text-muted mb-4"><%=user.local.firstname%></span>
+              <span class="text-muted mb-4"><%=user.local.lastname%></span></p>
             </li>
 
             <li>
@@ -42,11 +42,12 @@
               <p class="text-muted mb-4"><%=user.local.organization%></p>
             </li>
 
+            <li>
+              <p class="text-uppercase mb-2"><strong>About Me</strong></p>
+              <p class="text-muted mb-4"><%=user.description%></p>
+            </li>
+
           </ul>
-
-          <h5 class="font-weight-normal mb-3">About me</h5>
-
-          <p class="text-muted"><%=user.local.description%></p>
 
 
         </div>
@@ -58,14 +59,6 @@
   </section>
 
 </div>
-
-
-
-
-
-
-
-
 
 
 
