--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,20 +2,21 @@
 
 <%- include('nav'); -%>
 
-<% if (user.local.organization) { %>
+
 
   <div class="container pt-5 my-5 z-depth-1">
     <section class="p-md-3 mx-md-5 text-center">
       <h2 class="text-center mx-auto font-weight-bold mb-4 pb-2">Contact Us</h2>
       <div class="row">
-
-
-
+<% for(var i=0;i <contacts.length; i++){%>
+<% if (contacts[i].local.organization) { %>
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="p-4">
             <div
               class="avatar w-100 white d-flex justify-content-center align-items-center">
-              <img id="topImg2"src="../<%=contacts[i].local.profileImg%>"class="img-fluid rounded-circle z-depth-1">
+              <img id="topImg2"
+                src="../<%=contacts[i].local.profileImg%>"
+                class="img-fluid rounded-circle z-depth-1"/>
             </div>
           <a href="/chat?otherUserId=<%= contacts[i]._id%>">
             <div class="text-center mt-3">
@@ -35,12 +36,12 @@
            </a>
           </div>
         </div>
-
-
-
+  <% } %>
+  <% } %>
           </div>
         </section>
       </div>
-<% } %>
+
+
 
 <%- include('footer'); -%>
