--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,8 +58,9 @@
      <div class="col-md-6">
 
        <div class="d-flex flex-column justify-content-center align-items-center h-100">
-         <h1 class="heading">Material Design for Bootstrap</h1>
-         <h4 class="subheading font-weight-bold">World's most popular framework for building responsive, mobile-first websites and apps</h4>
+         <h1 class="heading"></h1>
+         
+         <h4 class="subheading font-weight-bold">Be Radical and join a community that helps you navigate your immigration process with ease. </h4>
 
        </div>
 
