--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -25,8 +25,7 @@
     <ul class="navbar-nav ml-auto nav-flex-icons">
       <div id="google_translate_element"></div>
       <li class="nav-item">
-        <a class="nav-link waves-effect waves-light">1
-          <i class="fas fa-envelope"></i>
+        <a class="nav-link waves-effect waves-light">
         </a>
       </li>
       <li class="nav-item avatar dropdown">
