--- a/views/updates.ejs
+++ b/views/updates.ejs
@@ -3,26 +3,7 @@
 <%- include('nav'); -%>
 
 <body id="main">
- <!-- <div class="container-fluid">
 
-
-      <section class="news">
-        <h1>Most Recent News</h1>
-      </section>
-
-      <section>
-        <ul id="articles">
-
-        </ul>
-      </section>
-
-    </div> -->
-
-
-    <!-- <div class="container mt-5"> -->
-
-
-      <!--Section: Content-->
       <section class="dark-grey-text">
 
         <!-- Section heading -->
@@ -30,56 +11,10 @@
         <!-- Section description -->
          <p class="text-center mx-auto w-responsive mb-5">Stay up to date on the most recent news regarding the immigrant community!</p>
 
-      	<!-- Grid row -->
         <!-- <div class="row align-items-center"> -->
-          <ul id="articles">
-
-          <!-- Grid column -->
-          <!-- <div class="col-lg-5 col-xl-4"> -->
-
-
-            <!-- Featured image -->
-            <!-- <div class="view overlay rounded z-depth-1-half mb-lg-0 mb-4">
-              <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/49.jpg" alt="Sample image">
-              <a>
-                <div class="mask rgba-white-slight"></div>
-              </a>
-            </div>
-
-          </div> -->
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-        <!-- <div class="col-lg-7 col-xl-8"> -->
-
-
-            <!-- Post title -->
-            <!-- <h4 class="font-weight-bold mb-3"><strong>Title of the news</strong></h4> -->
-            <!-- Excerpt -->
-            <!-- <p class="dark-grey-text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit
-              quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus
-              et aut officiis cum soluta nobis est eligendi placeat facere aut rerum.</p> -->
-            <!-- Post data -->
-            <!-- <p>by <a class="font-weight-bold">Jessica Clark</a>, 19/04/2018</p> -->
-            <!-- Read more button -->
-            <!-- <a class="btn btn-primary btn-md mx-0 btn-rounded">Read more</a> -->
-            <!-- <img src="" alt=""> -->
-
-
-        <!-- </div> -->
-          <!-- Grid column -->
-        </ul>
-        <!-- </div> -->
-        <!-- Grid row -->
-
-        <!-- <hr class="my-5"> -->
+          <ul id="articles"></ul>
 
       </section>
-      <!--Section: Content-->
 
-
-    <!-- </div> -->
-
-<script src="main.js"></script>
 
 <%- include('footer'); -%>
