--- a/views/clientsignup.ejs
+++ b/views/clientsignup.ejs
@@ -1,69 +1,90 @@
-<!doctype html>
-<html>
-<head>
-    <title>Radical</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
-</head>
+
+<%- include('head'); -%>
+
 <body class="sign">
-<div id="sign" class="container">
-<div class="col-sm-6 col-sm-offset-3">
 
-    <h1><span class="fa fa-sign-in"></span> Signup</h1>
 
-    <% if (message.length > 0) { %>
-        <div class="alert alert-danger"><%= message %></div>
-    <% } %>
 
-    <!-- LOGIN FORM -->
-<form action="/signup" method="post">
+<div class="container my-5 px-0 z-depth-1">
 
-   <div class="form-row">
-     <div class="form-group">
-       <label for="validationCustom012">First name</label>
-       <input type="text" class="form-control" id="validationCustom012" placeholder="First name" value="Mark"
-         required>
-     </div>
+  <!--Section: Content-->
+  <section class="p-5 my-md-5 text-center"
+    style="background-image: url(https://i.pinimg.com/originals/32/b8/77/32b877ed4aa7778cc7d43ebb7d95a6f1.png); background-size: cover; background-position: center center;">
 
-     <div class="form-group">
-       <label for="validationCustom022">Last name</label>
-       <input type="text" class="form-control" id="validationCustom022" value="Otto" required>
-     </div>
+    <form  action="/signup" method="post" class="my-5 mx-md-5" >
 
-   <div class="form-group">
-            <label>Email</label>
-            <input type="text" class="form-control" name="email">
+      <div class="row">
+        <div class="col-md-6 mx-auto">
+          <!-- Material form login -->
+          <div class="card">
+
+            <!--Card content-->
+            <div class="card-body">
+
+              <!-- Form -->
+              <form class="text-center" style="color: #757575;" action="#!">
+
+                <!-- Name -->
+                <h3 class="font-weight-bold my-4 pb-2 text-center dark-grey-text">SignUp</h3>
+
+                <!-- Email -->
+                <input type="email" id="defaultSubscriptionFormEmail" class="form-control " placeholder="Email" name="email">
+
+
+                <!---Password--->
+                <input type="password" id="defaultSubscriptionFormPassword" class="form-control mb-4" placeholder="Password"  name="password">
+
+
+
+                <!--AUTHENTICATION-->
+                
+                <div class="form-group">
+                  <div class="form-check pl-0">
+                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                    <label class="form-check-label" for="invalidCheck2">
+
+                      Agree to terms and conditions
+                    </label>
+                    <div class="invalid-feedback">
+                      You must agree before submitting.
+                    </div>
+                  </div>
+                </div>
+
+
+                <!---Button-------->
+
+                <button type="submit" class="btn btn-outline-blue btn-rounded my-4 waves-effect">SignUp</button>
+
+
+<!-- <button type="button" class="btn blue-gradient btn-margin btn-rounded"> -->
+
+
+
+
+                <p>Already have an account? <a href="/login">Login</a></p>
+                <p>Or go <a href="/">home</a>.</p>
+
+              </form>
+      <!---End Form ------>
+
+
+
+            </div>
+
+          </div>
+          <!-- Material form login -->
         </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" name="password">
-    </div>
+      </div>
 
-   <div class="form-group">
-     <div class="form-check pl-0">
-       <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-       <label class="form-check-label" for="invalidCheck2">
+    </form>
 
-         Agree to terms and conditions
-       </label>
-       <div class="invalid-feedback">
-         You must agree before submitting.
-       </div>
-     </div>
-   </div>
+  </section>
+  <!--Section: Content-->
 
-
-   <button type="submit" class="btn btn-warning btn-lg">Signup</button>
-
- </form>
-
-    <hr>
-
-    <p>Already have an account? <a href="/login">Login</a></p>
-    <p>Or go <a href="/">home</a>.</p>
 
 </div>
-</div>
+
+
 </body>
 </html>
