--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,13 @@
 <%- include('head'); -%>
 
 <body class="login" >
-<div id="cointainer"class="container">
-<div class="col-sm-6 col-sm-offset-3">
 
-    <h1><span class="fa fa-sign-in"></span> Login</h1> -->
+<div  class="container my-5 px-0 z-depth-1">
+  <section  class="p-5 my-md-5 text-center"
+    style="background-image: url(https://i.pinimg.com/originals/32/b8/77/32b877ed4aa7778cc7d43ebb7d95a6f1.png); background-size: cover; background-position: center center;">
+    <div  id="cointainer" class="col-sm-6 col-sm-offset-3">
+
+    <h1><span class="fa fa-sign-in"></span> Login</h1>
 
 
 
@@ -18,98 +21,27 @@
             <label>Password</label>
             <input type="password" class="form-control" name="password">
         </div>
+        <div class="form-group">
+          <div class="form-check pl-0">
+            <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+            <label class="form-check-label" for="invalidCheck2">
 
-        <button type="submit" class="btn btn-warning btn-lg">Login</button>
-    </form>
-
-    <hr>
-
-
-
-</div>
-</div>
-
-
-
-
-
-<div class="container my-5 px-0 z-depth-1">
-
-  <!--Section: Content-->
-  <section class="p-5 my-md-5 text-center"
-    style="background-image: url(https://i.pinimg.com/originals/32/b8/77/32b877ed4aa7778cc7d43ebb7d95a6f1.png); background-size: cover; background-position: center center;">
-
-    <form  action="/login" method="post" class="my-5 mx-md-5" >
-
-      <div class="row">
-        <div class="col-md-6 mx-auto">
-          <!-- Material form login -->
-          <div class="card">
-
-            <!--Card content-->
-            <div class="card-body">
-
-              <!-- Form -->
-              <form class="text-center" style="color: #757575;" action="#!">
-
-                <!-- Name -->
-                <h3 class="font-weight-bold my-4 pb-2 text-center dark-grey-text">SignUp</h3>
-
-                <!-- Email -->
-                <input type="email" id="defaultSubscriptionFormEmail" class="form-control " placeholder="Email" name="email">
-
-
-                <!---Password--->
-                <input type="password" id="defaultSubscriptionFormPassword" class="form-control mb-4" placeholder="Password"  name="password">
-
-
-                <!---Organization--->
-                <input type="text" id="defaultSubscriptionFormEmail" class="form-control" placeholder="Org/Company"  name="organization">
-
-                <!---Button-------->
-
-                <button type="submit" class="btn btn-outline-blue btn-rounded my-4 waves-effect">SignUp</button>
-
-
-<!-- <button type="button" class="btn blue-gradient btn-margin btn-rounded"> -->
-
-
-                <div class="form-group">
-                  <div class="form-check pl-0">
-                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-                    <label class="form-check-label" for="invalidCheck2">
-
-                      Agree to terms and conditions
-                    </label>
-                    <div class="invalid-feedback">
-                      You must agree before submitting.
-                    </div>
-                  </div>
-                </div>
-
-                <p>Already have an account? <a href="/login">Login</a></p>
-                <p>Or go <a href="/">home</a>.</p>
-
-              </form>
-      <!---End Form ------>
-
-
-
+              Agree to terms and conditions
+            </label>
+            <div class="invalid-feedback">
+              You must agree before submitting.
             </div>
-
           </div>
-          <!-- Material form login -->
         </div>
-      </div>
 
+        <button type="submit" class="btn btn-outline-blue btn-rounded my-4 waves-effect"">Login</button>
     </form>
 
-  </section>
-  <!--Section: Content-->
 
 
 </div>
-
+</section>
+</div>
 
 
 </body>
