--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,9 +58,9 @@
      <div class="col-md-6">
 
        <div class="d-flex flex-column justify-content-center align-items-center h-100">
-         <h1 class="heading"></h1>
-         
-         <h4 class="subheading font-weight-bold">Be Radical and join a community that helps you navigate your immigration process with ease. </h4>
+         <h1 class="heading">Be Radical</h1>
+
+         <h4 class="subheading font-weight-bold"> Join a community that helps you navigate your immigration process with ease. </h4>
 
        </div>
 
