--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -6,7 +6,7 @@
 
   <div class="container pt-5 my-5 z-depth-1">
     <section class="p-md-3 mx-md-5 text-center">
-      <h2 class="text-center mx-auto font-weight-bold mb-4 pb-2">Contact Us</h2>
+      <h2 class="text-center mx-auto font-weight-bold mb-4 pb-2">Connect for help! </h2>
       <div class="row">
 <% for(var i=0;i <contacts.length; i++){%>
 <% if (contacts[i].local.organization) { %>
